--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scathach-api",
-  "version": "1.0.12",
+  "version": "1.0.16",
   "description": "A NodeJS wrapper to interacts with Scathach bot",
   "main": "build/index.js",
   "types": "index.d.ts",
@@ -14,7 +14,8 @@
     "lint": "npx eslint . --ext .ts",
     "lint:fix": "npx eslint . --fix",
     "test:get": "npx ts-node test/scathach.get.ts",
-    "test:search": "npx ts-node test/scathach.search.ts"
+    "test:search": "npx ts-node test/scathach.search.ts",
+    "changelog": "npx changelog"
   },
   "keywords": [
     "NSFW",
@@ -36,11 +37,13 @@
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
+    "changelog": "^1.4.2",
     "eslint": "^7.32.0",
     "npx": "^10.2.2",
     "ts-node": "^10.7.0",
-    "typedoc": "^0.22.5",
-    "typedoc-plugin-rename-defaults": "^0.4.0",
+    "typedoc": "^0.23.10",
+    "typedoc-plugin-rename-defaults": "^0.6.4",
+    "typedoc-theme-hierarchy": "^3.0.0",
     "typescript": "^4.6.3"
   },
   "engines": {
